# EMGStateDetect

./: .gitignore  README.md  golden_data_creation.ipynb  pyproject.toml  streamlit.py  tutorial.ipynb
.devcontainer/: devcontainer.json
emgstatedetect/data_stages/: stages.py
emgstatedetect/providers/biopatrec/: biopatrec_classes.py  biopatrec_consts.py
emgstatedetect/providers/biopatrec/biopatrec_libemg_adapters/: adapter_10mov4chFU_AFEs.py
emgstatedetect/state_detection/: class_asignment.py  methods.py
emgstatedetect/utils/: log.py
emgstatedetect/visualizations/: plots.py
